Replaced queries execution on ReactiveClassicGenericQueryExecutor by execution using own QueryExecutor